--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -1,3 +1,22 @@
-<p>
-  chat works!
-</p>
+<div class="card m-4">
+  <div class="card-header">
+    <ul class="nav nav-pills card-header-pills">
+      <li class="nav-item mr-2">
+        <button class="btn btn-success" type="button">Conectar</button>
+      </li>
+      <li class="nav-item">
+        <button class="btn btn-warning" type="button">Cerrar Chat</button>
+      </li>
+    </ul>
+  </div>
+  <div class="card-body"></div>
+  <div class="card-footer">
+    <form class="form-inline">
+      <div class="form-group mx-3">
+        <label for="texto" class="sr-only">Mensaje: </label>
+        <input type="text" class="form-control" placeholder="Escribe un mensaje..." name="texto" id="texto" />
+      </div>
+      <button class="btn btn-primary" type="submit">Envíar</button>
+    </form>
+  </div>
+</div>
