Implementando conectar y desconectar del servidor Websocket

--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -2,15 +2,15 @@
   <div class="card-header">
     <ul class="nav nav-pills card-header-pills">
       <li class="nav-item mr-2">
-        <button class="btn btn-success" type="button">Conectar</button>
+        <button class="btn btn-success" type="button" (click)="conectar()" *ngIf="!conectado">Conectar</button>
       </li>
       <li class="nav-item">
-        <button class="btn btn-warning" type="button">Cerrar Chat</button>
+        <button class="btn btn-warning" type="button" (click)="desconectar()" *ngIf="conectado">Cerrar Chat</button>
       </li>
     </ul>
   </div>
-  <div class="card-body"></div>
-  <div class="card-footer">
+  <div class="card-body" *ngIf="conectado"></div>
+  <div class="card-footer" *ngIf="conectado">
     <form class="form-inline">
       <div class="form-group mx-3">
         <label for="texto" class="sr-only">Mensaje: </label>
