--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -9,14 +9,20 @@
       </li>
     </ul>
   </div>
-  <div class="card-body" *ngIf="conectado"></div>
+  <div class="card-body" *ngIf="conectado">
+    <ul class="list-group list-group-flush">
+      <li class="list-group-item list-group-item-light" *ngFor="let mensaje of mensajes">
+        {{ mensaje.fecha | date:'shortTime' }} : {{ mensaje.texto }}
+      </li>
+    </ul>
+  </div>
   <div class="card-footer" *ngIf="conectado">
     <form class="form-inline">
       <div class="form-group mx-3">
         <label for="texto" class="sr-only">Mensaje: </label>
-        <input type="text" class="form-control" placeholder="Escribe un mensaje..." name="texto" id="texto" />
+        <input type="text" class="form-control" placeholder="Escribe un mensaje..." name="texto" id="texto" [(ngModel)]="mensaje.texto" />
       </div>
-      <button class="btn btn-primary" type="submit">Envíar</button>
+      <button class="btn btn-primary" type="submit" (click)="enviarMensaje()">Envíar</button>
     </form>
   </div>
 </div>
