--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -1,10 +1,12 @@
 <div class="card m-4">
   <div class="card-header">
     <ul class="nav nav-pills card-header-pills">
-      <li class="nav-item mr-2">
-        <button class="btn btn-success" type="button" (click)="conectar()" *ngIf="!conectado">Conectar</button>
+      <li class="nav-item mr-2" *ngIf="!conectado">
+        <label for="username" class="sr-only">Username: </label>
+        <input type="text" class="form-control" placeholder="Tu username..." name="username" id="username" [(ngModel)]="mensaje.username" />
       </li>
-      <li class="nav-item">
+      <li class="nav-item mr-2">
+        <button class="btn btn-success" type="button" (click)="conectar()" *ngIf="!conectado" [disabled]="!mensaje.username">Conectar</button>
         <button class="btn btn-warning" type="button" (click)="desconectar()" *ngIf="conectado">Cerrar Chat</button>
       </li>
     </ul>
@@ -12,7 +14,8 @@
   <div class="card-body" *ngIf="conectado">
     <ul class="list-group list-group-flush">
       <li class="list-group-item list-group-item-light" *ngFor="let mensaje of mensajes">
-        {{ mensaje.fecha | date:'shortTime' }} : {{ mensaje.texto }}
+        <span *ngIf="mensaje.tipo === 'NUEVO_USUARIO'">{{ mensaje.fecha | date:'shortTime' }} @ {{ mensaje.texto }} {{ mensaje.username }}</span>
+        <span *ngIf="mensaje.tipo === 'MENSAJE'">{{ mensaje.fecha | date:'shortTime' }} {{ mensaje.username }} dice:<br /> {{ mensaje.texto }}</span>
       </li>
     </ul>
   </div>
